syntax = "proto3";
package proto.canary;

option go_package = "github.com/spinnaker/kleat/api/client/canary";

import "google/protobuf/wrappers.proto";

import "canary/aws.proto";
import "canary/datadog.proto";
import "canary/google.proto";
import "canary/newrelic.proto";
import "canary/prometheus.proto";
import "canary/signalfx.proto";

// Configuration for Spinnaker's canary service.
message Canary {
  // Whether the canary service is enabled.
  google.protobuf.BoolValue enabled = 1;

  // Canary service integrations. You must configure at least one account of
  // each canary.SupportedType (METRICS_STORE, CONFIGURATION_STORE,
  // OBJECT_STORE) in order to use Spinnaker's canary service.
  ServiceIntegrations serviceIntegrations = 2;

  // Name of the metrics account to use by default.
  string defaultMetricsAccount = 3;

  // Name of the metrics store to use by default (e.g., `prometheus`, `datadog`).
  string defaultMetricsStore = 4;

  // Whether or not to show all canary configs in Deck, or just those scoped to
  // the current application.
  google.protobuf.BoolValue showAllConfigsEnabled = 5;

  // Whether or not to enable custom filter templates for canary configs in Deck.
  google.protobuf.BoolValue templatesEnabled = 6;

  // The default canary judge. Defaults to `NetflixACAJudge-v1.0`, which is
  // currently the only open-source judge available by default.
  string defaultJudge = 7;

  // Name of storage account to use by default.
  string storageAccountName = 8;

  message ServiceIntegrations {
    canary.Aws aws = 1;
    canary.Datadog datadog = 2;
    canary.Google google = 3;
    canary.NewRelic newrelic = 4;
    canary.Prometheus prometheus = 5;
    canary.SignalFx signalfx = 6;
  }
}
